[gd_scene load_steps=11 format=2]

[ext_resource path="res://Space Shooter Redux/Bonus/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Pause Menu/Pause Menu.gd" type="Script" id=2]
[ext_resource path="res://Menus/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/UI_ButtonHovered.wav" type="AudioStream" id=4]
[ext_resource path="res://Menus/UI_ButtonClicked.mp3" type="AudioStream" id=5]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Pause/SelectedTable.png" type="Texture" id=6]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Pause/Table.png" type="Texture" id=7]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Pause/Window.png" type="Texture" id=8]
[ext_resource path="res://Menus/Pause Menu/PauseFont.tres" type="DynamicFont" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Pause Menu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 400 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Controls pausing of the game and shows the menu"
}

[node name="Window" type="NinePatchRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 8 )

[node name="PauseCtrl" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PauseLbl" type="Label" parent="PauseCtrl"]
anchor_right = 1.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseCtrl"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = 101.0
margin_right = 181.0
margin_bottom = -56.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="TextureButton" parent="PauseCtrl/VBoxContainer"]
margin_right = 361.0
margin_bottom = 144.0
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLbl" type="Label" parent="PauseCtrl/VBoxContainer/ResumeBtn"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -18.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 11 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBtn" type="TextureButton" parent="PauseCtrl/VBoxContainer"]
margin_top = 149.0
margin_right = 361.0
margin_bottom = 293.0
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLbl" type="Label" parent="PauseCtrl/VBoxContainer/OptionsBtn"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -18.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 11 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="TextureButton" parent="PauseCtrl/VBoxContainer"]
margin_top = 298.0
margin_right = 361.0
margin_bottom = 443.0
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLbl" type="Label" parent="PauseCtrl/VBoxContainer/QuitBtn"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -18.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 11 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 3 )]
pause_mode = 2
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="visibility_changed" from="." to="." method="_on_Pause_Menu_visibility_changed"]
[connection signal="mouse_entered" from="PauseCtrl/VBoxContainer/ResumeBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="PauseCtrl/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="mouse_entered" from="PauseCtrl/VBoxContainer/OptionsBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="PauseCtrl/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="mouse_entered" from="PauseCtrl/VBoxContainer/QuitBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="PauseCtrl/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
